Fixed up visual issue where buttons were not fading in opacity properly to indicate what form is active. Instead, added logic for proper text to appear above form

--- a/src/App.css
+++ b/src/App.css
@@ -120,6 +120,11 @@ button:hover { transform: scale( 1.025 ); }
 #BalanceSheet {}
 */
 
+#AddIncomeButton:hover,
+#AddExpenseButton:hover {
+  opacity: 1 !important;
+}
+
 #BalanceSheet tr { 
   width: 100%; 
   display: grid;
