--- a/src/App.css
+++ b/src/App.css
@@ -72,6 +72,10 @@ button:hover { transform: scale( 1.025 ); }
   background: linear-gradient(to right, var( --dark ) 0%, var( --black ) 100%);
 }
 
+.bg-blue-gradient {
+  background: linear-gradient(to right, var( --blue-light ) 0%, var( --blue ) 100%);
+}
+
 .text-shadow {
   text-shadow: 0px 2px 3px rgba( 112, 112, 112, 0.5 );
 }
@@ -109,6 +113,16 @@ button:hover { transform: scale( 1.025 ); }
   grid-template-rows: 1fr 1fr;
 }
 
+#HideOverviewButton {
+  display: none !important;
+  width: calc( 100% - 6rem ) !important;
+  height: 50px;
+  position: fixed;
+  z-index: 2;
+  margin-left: 3rem;
+  margin-top: 1rem;
+}
+
 
 /* 
   ---- Header 
@@ -124,6 +138,11 @@ button:hover { transform: scale( 1.025 ); }
 #AddExpenseButton:hover {
   opacity: 1 !important;
 }
+
+#ViewOverviewButton {
+  display: none !important;
+}
+
 
 #BalanceSheet tr { 
   width: 100%; 
@@ -370,4 +389,81 @@ input[type='number'] {
 
 .list li:hover .delete-btn {
   opacity: 1;
+}
+
+
+/*
+---- Extra small devices (portrait phones, less than 576px)
+*/
+@media (max-width: 575.98px) {
+
+}
+
+
+/*
+---- Small devices (landscape phones, less than 768px)
+*/
+@media (max-width: 767.98px) {
+
+}
+
+
+/*
+---- Medium devices (tablets, less than 992px)
+*/
+@media (max-width: 991.98px) {
+  .transaction {
+    width: 100% !important;
+    max-width: 100% !important;
+    min-width: 100% !important;
+  }
+
+  #TransactionButtonWrapper {
+    flex-wrap: wrap !important;
+  }
+
+  #ViewOverviewButton {
+    margin-top: 1rem;
+  }
+}
+
+
+/*
+---- Large devices (desktops, less than 1200px)
+*/
+@media (max-width: 1199.98px) {
+  #TransactionButtonWrapper { 
+    width: 100% !important;
+    display: flex !important;
+    flex-direction: row !important;
+    justify-content: space-around !important; 
+    margin-top: 4rem !important;
+  }
+}
+
+/*
+---- Large devices (desktops, less than 1200px)
+*/
+@media (max-width: 1399.998px) {
+  #LeftPanel { width: 100% !important; }
+
+  #ViewOverviewButton, #HideOverviewButton {
+    display: inline-block !important;
+  }
+
+  #ExpenseOverview {
+    padding-top: 3rem !important;
+  }
+
+  #RightPanel {
+    position: fixed !important;
+    z-index: 2 !important;
+    transition: 0.3s;
+    transform: translateX( 100% );
+    background-color: rgba( 254, 254, 254, 1 );
+  }
+
+  #RightPanel.slide-in {
+    transform: translateX( 0% ) !important;
+  }
 }
