--- a/src/App.css
+++ b/src/App.css
@@ -396,7 +396,15 @@ input[type='number'] {
 ---- Extra small devices (portrait phones, less than 576px)
 */
 @media (max-width: 575.98px) {
-
+  #RightPanel {
+    width: 100vw !important;
+    min-width: 100vw !important;
+    max-width: 100vw !important;
+    height: 100vh !important;
+    min-height: 100vh !important;
+    max-height: 100vh !important;
+    overflow-y: scroll !important;
+  }
 }
 
 
@@ -404,7 +412,9 @@ input[type='number'] {
 ---- Small devices (landscape phones, less than 768px)
 */
 @media (max-width: 767.98px) {
-
+  .nav-link:first-child {
+    margin-bottom: 1rem !important;
+  }
 }
 
 
@@ -445,7 +455,42 @@ input[type='number'] {
 ---- Large devices (desktops, less than 1200px)
 */
 @media (max-width: 1399.998px) {
-  #LeftPanel { width: 100% !important; }
+
+  #form {
+    width: 100% !important;
+    display: flex !important;
+    flex-direction: column !important;
+  }
+
+  #form div {
+    width: 100% !important;
+    margin-top: 0.75rem !important;
+  }
+
+  #form div input, 
+  #form div select,
+  #form div button {
+    width: 100% !important;
+  }
+
+  #BalanceSheet {
+    margin-top: 2rem !important;
+  }
+
+  #TransactionButtonWrapper {
+    display: flex !important;
+    flex-direction: column !important;
+  }
+
+  #TransactionButtonWrapper button {
+    margin-top: 1rem !important;
+    border: none !important;
+  }
+
+  #LeftPanel { 
+    width: 100% !important; 
+    padding: 1rem !important;
+  }
 
   #ViewOverviewButton, #HideOverviewButton {
     display: inline-block !important;
@@ -465,5 +510,64 @@ input[type='number'] {
 
   #RightPanel.slide-in {
     transform: translateX( 0% ) !important;
+  }
+
+  .transaction {
+    flex-direction: column !important;
+  }
+
+  .transaction__icon {
+    width: 100% !important;
+    padding: 1rem !important;
+    border-radius: 10px 10px 0px 0px !important;
+  }
+
+  .transaction__details {
+    width: 100% !important;
+    min-width: 100% !important;
+    flex-direction: column !important;
+    text-align: center;
+    align-items: center !important;
+    justify-content: center !important;
+    padding: 2rem !important;
+  }
+
+  .transaction__details div {
+    width: 100% !important;
+    min-width: 100% !important;
+    margin: auto !important;
+    padding: 0 !important;
+  }
+
+  .transaction__details div:last-child {
+    flex-direction: column !important;
+    align-items: center !important;
+    text-align:center !important;
+  }
+
+  .transaction__details--label {
+    margin-top: 1rem !important;
+  }
+
+  .transaction__amount {
+    width: 100% !important;
+    text-align:center;
+    display: block !important;
+    margin-right: 0 !important;
+    margin-top: 1rem !important;
+  }
+
+  .transaction__delete-button {
+    display: block !important;
+    margin: auto;
+    margin-top: 2rem !important;
+    opacity: 0.5 !important;
+    padding: 15px 50px !important;
+    border: none !important;
+  }
+
+  .transaction__delete-button svg {
+    margin-top: -25px;
+    margin-left: -5px;
   }
 }
